log
Thu Mar 17 12:25:11 HSP 2022: 
 list.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
16b56d9
Thu Mar 17 12:26:43 HSP 2022: 
 list.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  1|5
total_score: 10/70
fb2683d
Thu Mar 17 12:39:27 HSP 2022: 
 list.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
In file included from test.c:5:0:
list.c: In function 'nextList':
list.c:47:9: error: assignment makes integer from pointer without a cast [-Werror=int-conversion]
     sgte=list->current->next;
         ^
list.c:49:12: error: return makes pointer from integer without a cast [-Werror=int-conversion]
     return sgte;
            ^~~~
cc1.exe: all warnings being treated as errors
Compilation failed
4603ae9
